# bancolombia-technical-challenge-b

./: .gitignore  README.md
challenge/: ejemplo_50_taskbots_prueba.txt
docs/: architecture.md  diseno.md  evidencia_pruebas.txt  index.html  uml.md  (+2 more)
poc/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
poc/contracts/: openapi.json  openapi.yaml
poc/data/: inventario_ejemplo.csv
poc/n8n/: README-n8n.md  smoke.sh  workflow.cloud.json  workflow.json
poc/reports/example/: reporte.html  reporte.json
poc/scripts/: export_openapi.py
poc/src/taskbot_advisor/: __init__.py  __main__.py  discovery.py
poc/src/taskbot_advisor/application/: ports.py  use_cases.py
poc/src/taskbot_advisor/domain/: api_enablement.py  catalog.py  entities.py  exceptions.py  review.py  rules.py  scoring.py  similarity.py
poc/src/taskbot_advisor/infrastructure/: advisor.py  config.py  container.py  logging.py  mapping.py  security.py  similarity_rapidfuzz.py
poc/src/taskbot_advisor/infrastructure/renderers/: html_renderer.py  json_renderer.py
poc/src/taskbot_advisor/infrastructure/renderers/templates/: report.html
poc/src/taskbot_advisor/infrastructure/repositories/: file_repositories.py
poc/src/taskbot_advisor/interface/: api.py  cli.py
poc/tests/integration/: test_api.py  test_cli.py  test_pipeline.py
poc/tests/unit/: test_advisor.py  test_catalog_and_api.py  test_config.py  test_discovery_facade.py  test_mapping.py  test_misc_units.py  test_repositories.py  test_rules.py  test_scoring.py  test_security.py  test_similarity.py  test_use_cases.py
(+8 files in other folders)
