[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "taskbot-advisor"
version = "1.0.0"
description = "Agente de inteligencia para consolidacion y priorizacion de migracion de taskbots (RPA)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Prueba Tecnica Senior - Parte B" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "rapidfuzz>=3.6",
    "jinja2>=3.1",
    "typer>=0.12",
]

[project.optional-dependencies]
# Capa de agente LLM OPCIONAL. La solucion corre 100% sin esto (fallback determinista).
llm = ["anthropic>=0.39"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.27"]

[project.scripts]
taskbot-advisor = "taskbot_advisor.interface.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"taskbot_advisor.infrastructure.renderers" = ["templates/*.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["taskbot_advisor"]

[tool.coverage.report]
# La suite mantiene 100% de cobertura sobre el codigo de la solucion.
fail_under = 100
show_missing = true
